overflow fixed

--- a/Lab Assignmet 2/shared.css
+++ b/Lab Assignmet 2/shared.css
@@ -3,4 +3,5 @@ body {
     margin: 0;
     background-color: rgb(250, 237, 208);
     font-size: 1.5rem;
+    overflow-x: hidden;
 }
